# Blackjack

./: Blackjack.qml  CMakeLists.txt  Main.qml  MainMenu.qml  README.md  blackjackcontroller.cpp  blackjackcontroller.h  card.cpp  card.h  deck.cpp  deck.h  handmodel.cpp  handmodel.h  main.cpp  random.h
